--- a/Admin-Report/Presentation/Views/Windows/SplashWindow.xaml
+++ b/Admin-Report/Presentation/Views/Windows/SplashWindow.xaml
@@ -67,7 +67,7 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Margin="50" Height="320" Width="320">
-                <Image Source="/Assets/systems.png" />
+                <Image Source="/Assets/systems.png"  Height="300" Margin="10 0"/>
 
 
             </StackPanel>
